apps/servarr/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 9091
      targetPort: web
      protocol: TCP
  selector:
    app: transmission
