apps/servarr/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-authentik-auth@kubernetescrd
spec:
  ingressClassName: traefik-traefik
  tls:
    - hosts:
        - transmission.home.bstjohn.net
      secretName: wildcard-home-tls
  rules:
    - host: transmission.home.bstjohn.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas-gate
                port:
                  number: 80
